# PJ_Pygame_Prezentacja

./: .gitignore  PPoint.pptx  README.md  pyproject.toml  tox.ini
Live/: events.py  global_vars.py  loader.py  main.py
Live/sprites/: Player.py  __base.py  background.py  bullet.py  enemy.py
game/: README.md  events.py  global_vars.py  loader.py  main.py  pyproject.toml  requirements.txt  tox.ini
game/sprites/: __base.py  background.py  base_sprite.py  bullet.py  bullets.py  enemy.py  player.py
src/: pyproject.toml
